# Simple-Flask

./: README.md  app.py  pyproject.toml
apps/: __init__.py
apps/error/: handlers.py
apps/post/: forms.py  views.py
apps/user/: forms.py  views.py
config/: setting.py
db/: blog.db
migrations/versions/: 6579aa047db9_.py
models/: post.py  user.py
models/mixins/: datetime.py
templates/: layout.html
templates/errors/: 404.html
templates/helpers/: form_field.html
templates/posts/: edit.html  index.html  news.html  show.html
templates/shared/: flash.html  navbar.html
templates/users/: login.html  news.html
